Updated html structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <title>FCC Personal Portfolio</title>
 </head>
 <body>
-    
-    
+ <header>
+     <nav>
+         <ul id="navbar">
+             <li><a href="#welcome-section">About</a></li>
+             <li><a href="#projects">Work</a></li>
+             <li><a href="#contact">Contact</a></li>
+         </ul>
+     </nav>
+ </header>
+  
+ 
+<div id="welcome-section">
+    <h1>Hey i'am Stephen.</h1>
+    <p>a web developer</p>
+</div>
+
+
+<section id="projects">
+    <a href="">
+    <div class="project-tile">
+
+    </div>
+</a>
+</section>
+
+
+<section id="contact">
+    <a href="" id="profile-link"></a>
+</section>
+
 </body>
 </html>
