--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FCC Personal Portfolio</title>
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
  <header>
@@ -18,23 +19,30 @@
  </header>
   
  
-<div id="welcome-section">
+<section id="welcome-section">
+    <div class="row">
     <h1>Hey i'am Stephen.</h1>
     <p>a web developer</p>
 </div>
+</section>
 
 
 <section id="projects">
-    <a href="">
-    <div class="project-tile">
-
+    <h1>My Work</h1>
+    <div class="work">
+    <a href="https://codepen.io/stephenice/pen/BbLWPB">
+        <img src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png" alt="">
+    <div class="project-tile">Tribute Page
     </div>
 </a>
+</div>
 </section>
 
 
 <section id="contact">
-    <a href="" id="profile-link"></a>
+    <h1>My Contact</h1>
+        <a href="https://github.com/Stephenice" id="profile-link"  target="_blank">
+        <img src="https://cdn.freebiesupply.com/logos/large/2x/github-icon-logo-png-transparent.png" alt="github"></a>
 </section>
 
 </body>
